# ATENA-AI

./: .env.example  .gitignore  LICENSE  README.md  config.json  package-lock.json  package.json  pyproject.toml  pytest.ini  requirements-test.txt  requirements.txt  setup-google.ts  setup.py  tsconfig.json
src/: __init__.py  index.ts  main.py  types.ts
src/agents/: AnalyticsAgent.ts  CommunicationsAgent.ts  ContextAwarenessAgent.ts  DecisionSupportAgent.ts  IntegrationAgent.ts  KnowledgeManagementAgent.ts  ResearchAgent.ts  SchedulingAgent.ts  TaskManagementAgent.ts  WorkflowAutomationAgent.ts
src/business_intelligence/: business_intelligence.py
src/config/: config.ts  discord.config.ts
src/core/: Assistant.ts  MessageBus.ts  OrchestratorAgent.ts
src/dialogue/: context_manager.py
src/discord_bot/: discord_bot.py
src/executor/: task_executor.py
src/input_processor/: input_processor.py
src/integrations/: Discord.ts  GoogleWorkspace.ts  LinkedIn.ts  News.ts  __init__.py  news.py
src/knowledge/: knowledge_base.py
src/logging/: logger.py
src/meta_agent/: __init__.py  meta_agent.py  self_improvement.py
src/nlu/: intent_analyzer.py
src/services/: CommandHandler.ts  DiscordService.ts  MonitoringService.ts  external_services.py
src/types/: index.ts
src/utils/: error_handler.py  helpers.py  helpers.ts
tests/: __init__.py  conftest.py  pytest.ini  test_error_handler.py  test_meta_agent.py
tests/discord_bot/: test_commands.py
tests/integrations/: __init__.py  test_news.py
tests/meta_agent/: test_integration.py  test_meta_agent.py  (+1 more)
(+7 files in other folders)
